--- a/src/index.css
+++ b/src/index.css
@@ -69,4 +69,5 @@ footer {
   color: #fff;
   padding: 10px;
   text-align: center;
+  margin-top: auto; 
 }
