--- a/src/modules/template/Module.css
+++ b/src/modules/template/Module.css
@@ -8,16 +8,19 @@
     align-items: center; /* Aligns items vertically in the middle */
     padding: 20px; /* Optional padding */
     border-radius: 25px;
-    
+    flex-wrap: wrap;
     padding: 20px;
     margin: 50px;
     box-shadow: 4px 4px 50px rgba(0, 0, 0, 0.5); /* Creates a shadow */
+    box-sizing: border-box;
   }
   
   .title {
     padding-left: 70px;
     text-align: left;
     font-size: 2em; /* Adjust the font size */
+    word-wrap: break-word; /* Ensure long words wrap */
+    max-width: 60%;
   }
 
 .toc {
